# aisekiya-etl

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
webapp_aisekiya/: app.py
webapp_aisekiya/src/: constants.py  data_framing.py  data_scraping.py  gcs.py
